Cambios de Archivos Base de Vagrant